- Rewrite position culling - adjust particle rain compat